# image-fft-converter-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  fft_tool.py  lambda_function.py  pyproject.toml  requirements.txt
docs/: architecture.puml
terraform/: data.tf  ecr.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  variables.tf
tests/: test_fft_tool.py  test_lambda_function.py
